--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,32 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.unesc.wslock">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.WSLock">
+        android:theme="@style/Theme.WSLock"
+        android:usesCleartextTraffic="true">
+
+        <activity
+            android:name=".activities.UserFormActivity"
+            android:parentActivityName=".activities.LoginActivity"
+            android:windowSoftInputMode="stateHidden" />
+
+        <activity
+            android:name=".activities.LoginActivity"
+            android:windowSoftInputMode="stateHidden">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,5 +36,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
